test/invalid-semantics/66358_wrong_identifier/function_called_print.mag
-- Author: 66358, Gustavo Cardoso
fun print (x) : Int -> Int = x + 1

fun main (_) : Unit -> Unit = print(6)